--- a/design/todo.txt
+++ b/design/todo.txt
@@ -1,6 +1,12 @@
 将任务间依赖的DAG框架化，实现更为通用的模式，即给出任务DAG，对于任意Stage，都可以自动进行判断执行顺序
 
 
+stage在put_data处接到任务开始通知，在worker处接到任务完成通知，以此控制任务依赖
+需要scheduler，根据DAG顺理任务顺序
+
+
+
+
 每个库安装的顺序执行次序:
 填入name
 获取版本
