--- a/design/todo.txt
+++ b/design/todo.txt
@@ -1,14 +1,14 @@
-依赖版本选择策略:
-优先从已安装版本选择最新的适合的版本
-如果未找到已安装版本，则安装最新版
-若存在菱形依赖，则要检测是否存在版本冲突
-若存在版本冲突，则需要安装包重新决定各个节点的版本
-如果安装包无法决定，则升级全部版本，再次尝试解析依赖
-如果还是存在冲突，则让用户解决，如果用户无法解决，则安装失败
+安装依赖处理
 
+1. 构建安装DAG
+2. 每次从当前DAG选取一个源节点，确定该节点版本，从DAG中移除已确定版本的节点，和不需要的节点
+3. 移除节点边时，需要进行版本范围收缩
+4. 选取版本应当优先从已安装库中选取，再从包候选项中选取
 
-
-
+版本或配置冲突:
+如果存在版本或配置冲突，则使用安装包指定的默认依赖版本或配置
+如果还是存在冲突，则让用户解决
+如果都无法解决冲突，则安装失败
 
 
 
